# mytools

./: README.md  news_sources.txt  pyproject.toml
mytools/: main.py  netwatch.py  network.py  news.py  sensors.py  ui.py
